Use OPENCLAW_GATEWAY_TOKEN env var

--- a/config.example.yaml
+++ b/config.example.yaml
@@ -8,7 +8,7 @@ gateway:
   
   # Authentication token
   # Can use environment variable reference or hardcode
-  token: "${OPENCLAW_TOKEN}"
+  token: "${OPENCLAW_GATEWAY_TOKEN}"
 
 session:
   # Where to store session files
